# arm_adb

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  libtool
.github/: FUNDING.yml
include/: cutils  platform_tools_version.h
lib/: Makefile.am  Makefile.in
lib/base/: file.cpp  logging.cpp
lib/libbuildversion/: Android.bp  libbuildversion.cpp
lib/libbuildversion/tests/: Android.bp
lib/libcutils/include/cutils/: trace.h
src/: Android.mk  Android.mk.best  Makefile.am  Makefile.in  adb_auth_host.cpp  adb_client.h  adb_main.cpp  commandline.cpp  diagnose_usb.cpp  main.c  main.h  sysdeps.h  types.h  usb_linux.cpp  usb_linux.cpp2  usb_linux.ds.cpp  usb_linux_client.cpp
src/client/: main.cpp  usb_dispatch.cpp
src/daemon/: main.cpp
src/libadb_usb/: Android.mk  adb.c  sysdeps.h  usb_linux_client.c
src/sysdeps/posix/: network.cpp
