lib_LTLIBRARIES = libcutils.la
libcutils_la_SOURCES = libcutils/socket_inaddr_any_server.c \
		       libcutils/socket_local_client.c \
		       libcutils/socket_local_server.c \
		       libcutils/socket_loopback_client.c \
		       libcutils/socket_loopback_server.c \
		       libcutils/socket_network_client.c \
		       libcutils/load_file.c
libcutils_la_CFLAGS = -I$(top_srcdir)/include
